[gd_scene load_steps=6 format=3 uid="uid://bwqw45rkcari1"]

[ext_resource type="Script" uid="uid://cmd43ju5msymh" path="res://UI/win_screen.gd" id="1_t25dr"]
[ext_resource type="Theme" uid="uid://msjsp8wfk88q" path="res://UI/button_theme.tres" id="1_w024j"]
[ext_resource type="Texture2D" uid="uid://c3w17r3iqoels" path="res://UI/Sprites/win_menu.png" id="3_qpj51"]

[sub_resource type="SystemFont" id="SystemFont_oqmmh"]
font_names = PackedStringArray("LT Wave Text")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_mwi6r"]
font = SubResource("SystemFont_oqmmh")
font_size = 59

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w024j")
script = ExtResource("1_t25dr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1294.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 550
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 550
theme_override_constants/margin_bottom = 300

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0.64705884)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_qpj51")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 34

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "CONGRATS !"
label_settings = SubResource("LabelSettings_mwi6r")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Score : 0"
label_settings = SubResource("LabelSettings_mwi6r")

[node name="BestScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Best Score : 0"
label_settings = SubResource("LabelSettings_mwi6r")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESTART"
icon_alignment = 1

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MAIN
MENU"
icon_alignment = 1

[node name="NextLevelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "NEXT
LEVEL"
icon_alignment = 1
